Añadido portadas a videos

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <img src="./img/foto14.jpg">
         <img src="./img/foto19.jpg">
         <img src="./img/foto2.PNG">
-        <video controls muted loop playsinline>
+        <video controls muted playsinline poster="./img/foto29.jpg">
             <source src="./video/video1.mp4" type="video/mp4">
             Tu navegador no soporta video.
         </video>
@@ -146,7 +146,7 @@
         <img src="./img/foto22.jpg">
         <img src="./img/foto23.jpg">
         <img src="./img/foto24.jpg">
-        <video controls muted loop playsinline>
+        <video controls muted playsinline poster="./img/foto28.jpg">
             <source src="./video/video2.mp4" type="video/mp4">
             Tu navegador no soporta video.
         </video>
