--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <img src="./img/foto14.jpg">
         <img src="./img/foto19.jpg">
         <img src="./img/foto2.PNG">
-        <video controls muted playsinline poster="./img/foto29.jpg">
+        <video controls muted playsinline poster="./img/foto29.jpg" preload="metadata">
             <source src="./video/video1.mp4" type="video/mp4">
             Tu navegador no soporta video.
         </video>
