--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             overflow: hidden;
             position: relative;
             background: #000;
+            aspect-ratio: 4/6;
         }
 
         .video-wrapper video {
