mas cambios en portada video

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <img src="./img/foto19.jpg">
         <img src="./img/foto2.PNG">
         <div class="video-wrapper">
-            <video controls muted playsinline poster="./img/foto29.jpg" preload="metadata">
+            <video controls muted playsinline autoplay poster="./img/foto29.jpg" preload="metadata">
                 <source src="./video/video1.mp4" type="video/mp4">
                 Tu navegador no soporta video.
             </video>
@@ -167,7 +167,7 @@
         <img src="./img/foto23.jpg">
         <img src="./img/foto24.jpg">
         <div class="video-wrapper">
-            <video controls muted playsinline poster="./img/foto28.jpg" preload="metadata">
+            <video controls muted playsinline autoplay poster="./img/foto28.jpg" preload="metadata">
                 <source src="./video/video2.mp4" type="video/mp4">
                 Tu navegador no soporta video.
             </video>
