arreglo de fotos no vistas

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </header>
 
     <section class="gallery">
-        <img src="/img/foto37.jpg" class="imagen">
+        <img src="./img/foto37.jpg" class="imagen">
         <div class="video-wrapper">
             <video controls muted playsinline autoplay poster="./img/foto29.jpg" preload="metadata">
                 <source src="./video/video4.mp4" type="video/mp4">
@@ -170,13 +170,13 @@
         <img src="./img/foto12.jpg" class="imagen">
         <img src="./img/foto3.PNG" class="imagen">
         <img src="./img/foto4.PNG" class="imagen">
-        <img src="/img/foto39.jpg" class="imagen">
+        <img src="./img/foto39.jpg" class="imagen">
         <img src="./img/foto5.PNG" class="imagen">
-        <img src="/img/foto34.jpg" class="imagen">
+        <img src="./img/foto34.jpg" class="imagen">
         <img src="./img/foto6.PNG" class="imagen">
         <img src="./img/foto7.PNG" class="imagen">
         <img src="./img/foto8.jpg" class="imagen">
-        <img src="/img/foto38.jpg" class="imagen">
+        <img src="./img/foto38.jpg" class="imagen">
         <div class="video-wrapper">
             <video controls muted playsinline autoplay poster="./img/foto29.jpg" preload="metadata">
                 <source src="./video/video5.mp4" type="video/mp4">
@@ -185,7 +185,7 @@
         </div>
         <img src="./img/foto9.PNG" class="imagen">
         <img src="./img/foto10.jpg" class="imagen">
-        <img src="/img/foto35.jpg" class="imagen">
+        <img src="./img/foto35.jpg" class="imagen">
         <img src="./img/foto11.jpg" class="imagen">
         <img src="./img/foto14.jpg" class="imagen">
         <img src="./img/foto19.jpg" class="imagen">
@@ -197,7 +197,7 @@
             </video>
         </div>
         <img src="./img/foto15.jpg" class="imagen">
-        <img src="/img/foto32.jpg" class="imagen">
+        <img src="./img/foto32.jpg" class="imagen">
         <img src="./img/foto16.jpg" class="imagen">
         <img src="./img/foto17.jpg" class="imagen">
         <img src="./img/foto18.jpg" class="imagen">
@@ -222,16 +222,16 @@
         <img src="./img/foto25.jpg" class="imagen">
         <img src="./img/foto26.jpg" class="imagen">
         <img src="./img/foto27.jpg" class="imagen">
-        <img src="/img/foto36.jpg" class="imagen">
+        <img src="./img/foto36.jpg" class="imagen">
         <div class="video-wrapper" class="imagen">
             <video controls muted playsinline autoplay poster="./img/foto29.jpg" preload="metadata">
                 <source src="./video/video6.mp4" type="video/mp4">
                 Tu navegador no soporta video.
             </video>
         </div>
-        <img src="/img/foto30.jpg" class="imagen">
-        <img src="/img/foto31.jpg" class="imagen">
-        <img src="/img/foto33.jpg" class="imagen">
+        <img src="./img/foto30.jpg" class="imagen">
+        <img src="./img/foto31.jpg" class="imagen">
+        <img src="./img/foto33.jpg" class="imagen">
     </section>
 
     <a target="_blank"
