--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </header>
 
     <section class="gallery">
-        <img src="./img/foto37.jpg" class="imagen">
+        <img src="img\foto37.jpg" class="imagen">
         <div class="video-wrapper">
             <video controls muted playsinline autoplay poster="./img/foto29.jpg" preload="metadata">
                 <source src="./video/video4.mp4" type="video/mp4">
